feat: adding wallet index and new resources for thin wallet
